Adding Computer Management, CSV Iport, Group Management and OU Management pages

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                                 <div class="sb-nav-link-icon"><i class="fas fa-columns"></i></div>
                                 Computer Management
                             </a>
-                            <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapsePages" aria-expanded="false" aria-controls="collapsePages">
+                            <a class="nav-link collapsed" href="GrpManag.html">
                                 <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
                                 Group Management
                                 <!-- <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div> -->
@@ -158,11 +158,11 @@
                                 </nav>
                             </div>
                             <!-- <div class="sb-sidenav-menu-heading">Addons</div> -->
-                            <a class="nav-link" href="charts.html">
+                            <a class="nav-link" href="OUManag.html">
                                 <div class="sb-nav-link-icon"><i class="fas fa-chart-area"></i></div>
                                 OU Management
                             </a>
-                            <a class="nav-link" href="tables.html">
+                            <a class="nav-link" href="CSVImport.html">
                                 <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
                                 CSV Import
                             </a>
