--- a/CompManage.html
+++ b/CompManage.html
@@ -107,7 +107,7 @@
                         
                          <li><a class="dropdown-item" href="#!">Home</a></li> 
                         <li><hr class="dropdown-divider" /></li>
-                        <li><a class="dropdown-item" href="#!">Logout</a></li>
+                        <li><a class="dropdown-item" href="login.html">Logout</a></li>
                     </ul>
                 </li>
             </ul>
@@ -122,12 +122,11 @@
                                 <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
                                 User Management
                             </a>
-                            <!-- <div class="sb-sidenav-menu-heading"></div> -->
                             <a class="nav-link" href="CompManage.html">
                                 <div class="sb-nav-link-icon"><i class="fas fa-columns"></i></div>
                                 Computer Management
                             </a>
-                            <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapsePages" aria-expanded="false" aria-controls="collapsePages">
+                            <a class="nav-link collapsed" href="GrpManag.html">
                                 <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
                                 Group Management
                                 <!-- <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div> -->
@@ -159,11 +158,11 @@
                                 </nav>
                             </div>
                             <!-- <div class="sb-sidenav-menu-heading">Addons</div> -->
-                            <a class="nav-link" href="charts.html">
+                            <a class="nav-link" href="OUManag.html">
                                 <div class="sb-nav-link-icon"><i class="fas fa-chart-area"></i></div>
                                 OU Management
                             </a>
-                            <a class="nav-link" href="tables.html">
+                            <a class="nav-link" href="CSVImport.html">
                                 <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
                                 CSV Import
                             </a>
@@ -178,3 +177,66 @@
             <div id="layoutSidenav_content">
                 <main>
                     <div class="container-fluid px-4">
+
+    <div class="container">
+
+        <div class="right-section">
+            <h4>Computer Managment</h4>
+            <h6>Computer Creation</h6>
+            <a href="#">Create Single User</a>
+            <a href="#">Create Bulk Users</a>
+
+            <h6>Computer Modification</h6>
+            <a href="#">Modify Single Computer</a>
+            <a href="#">Modify Bulk Computers</a>
+
+            <h6>CSV Import</h6>
+            <a href="#">Create Computers</a>
+            <a href="#">Modify Computers</a>
+        </div>
+
+         <!--Left navigation section -->
+        <div class="right-section">
+            <h4>Bulk User Modification</h4>
+            <h6>General Attributes</h6>
+
+            <a href="#">Modify group attributes of computers</a>
+            <a href="#">Modify general attributes</a>
+            <a href="#">Profile Attributes</a>
+            <a href="#">Custom Attributes</a>
+            <a href="#">Reset Computers</a>
+
+            <div class="group">
+            <a href="#">Move Computers</a>
+            <a href="#">Enable/Delete Computers</a>
+            <a href="#">Delete Computers</a>
+            <a href="#">Restored Deleted Computers</a>
+            </div> 
+        </div>
+        
+        <!-- Right content section -->
+ 
+            </main>
+                <footer class="py-4 bg-light mt-auto">
+                    <div class="container-fluid px-4">
+                        <div class="d-flex align-items-center justify-content-between small">
+                            <div class="text-muted">Copyright &copy; Your Website 2023</div>
+                            <div>
+                                <a href="#">Privacy Policy</a>
+                                &middot;
+                                <a href="#">Terms &amp; Conditions</a>
+                            </div>
+                        </div>
+                    </div>
+                </footer>
+            </div>
+        </div>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+        <script src="js/scripts.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js" crossorigin="anonymous"></script>
+        <script src="assets/demo/chart-area-demo.js"></script>
+        <script src="assets/demo/chart-bar-demo.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/umd/simple-datatables.min.js" crossorigin="anonymous"></script>
+        <script src="js/datatables-simple-demo.js"></script>
+    </body>
+</html>
